[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-simple-cache"
version = "0.1.0"
description = "Умный кэш для асинхронных функций с поддержкой TTL"
authors = [
    {name = "DeLisov", email = "Du.Lisov.Mail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=4.5.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/mintlygit/Async-Simple-Cache"
Repository = "https://github.com/mintlygit/Async-Simple-Cache.git"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false